--- a/index.html
+++ b/index.html
@@ -4,11 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ahmed Personal Site</title>
+    <title>➣ AHMED HASSAN</title>
 </head>
 <body>
-    <center>
-        <h1>Testing</h1>
-    </center>
+    <h1>Ahmed Hassan</h1>
+    <p><em>I am a <strong>Web Architect</strong> and <strong>Freelancer</strong>.</em></p>
+    <hr size="3" noshade>
+    <h3>Education</h3>
+    <ul>
+        <li>University</li>
+        <ul>
+            <li>Bachelor's of Computer Science | Fedaral Urdu University of Art's, Science, and 
+                Technology | <a href="https://en.wikipedia.org/wiki/Islamabad" target="_blank">Islamabad</a></li>
+        </ul>
+        <li>College</li>
+        <ul>
+            <li>Pre-Engineering | Superior College | <a href="https://en.wikipedia.org/wiki/Rawalpindi" target="_blank">Rawalpindi</a></li>
+        </ul>
+        <li>School</li>
+        <ul>
+            <li>Pre-Medical | Beacon Education House | <a href="https://en.wikipedia.org/wiki/Rawalpindi" target="_blank">Rawalpindi</a></li>
+        </ul>
+    </ul>
+    <hr size="3" noshade>
+    <a href="hobbies.html"><h3>Hobbies</h3></a>
+    <hr size="3" noshade>
+    <h1>🖤</h1>
+    <img 
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRpdz8al7g1u4ZdthhHwq4oS
+        8QBu1cPBbSQ9g&usqp=CAU" 
+        alt="Horses and Horse Riding">
+    <hr size="3" noshade="">
+    <a href="contact.html"><h3>Contact</h3></a>
 </body>
 </html>
