--- a/contact.html
+++ b/contact.html
@@ -7,17 +7,65 @@
     <title>Contact</title>
 </head>
 <body>
-    <h3>Contact</h3>
-    <ul>
-        <li>Email</li>
-        <ul>
-            <li>ahmed.media71@gmail.com</li>
-            <li>ahmed.media71@yahoo.com</li>
-        </ul>
-        <li>Website</li>
-        <ul>
-            <li><a href="https://dotahmed.000webhostapp.com" target="_blank">My Personal Portfolio</a></li>
-        </ul>
-    </ul>
+    <h3>Contact Me</h3>
+        <form align="center" action="mailto:ahmed.media71@yahoo.com" method="post" enctype="text/plain">
+            <table>
+                <tr>
+                    <td><label for="Name">Name:</label></td>
+                    <td><input type="text" name="Name" value=""></td>
+                </tr>
+                <tr>
+                    <td><label for="Email">Email:</label></td>
+                    <td><input type="email" name="Email" value=""></td>
+                </tr>
+                <tr>
+                    <td><label for="Message">Message:</label></td>
+                    <td><textarea name="Message" cols="19" rows="5"></textarea></td>
+                </tr>
+                <tr>
+                    <td><input type="submit" name=""></td>
+                </tr>
+            </table>
+        </form>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <form action="">
+    <table width="400px" height="150px">
+        <tr>
+            <td><label for="name">Name:</label></td>
+            <td><input id="name" type="text"></td>
+        </tr>
+        <br>
+        <br>
+        <tr>
+            <td><label for="email">Email:</label></td>
+            <td><input id="email" type="email"></td>
+        </tr>
+        <br>
+        <tr>
+            <td><label for="msg">Message:</label></td>
+            <td><input id="msg" type="text"></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><input type="submit"></td>
+        </tr>
+    </table>
+</form> -->
