--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
     <title>➣ AHMED HASSAN</title>
 </head>
 <body>
-    <h1>Ahmed Hassan</h1>
-    <p><em>I am a <strong>Web Architect</strong> and <strong>Freelancer</strong>.</em></p>
+    <table cellspacing="20">
+        <tr>
+            <td>
+                <img src="./img/profile.png" alt="Profile Picture">
+            </td>
+            <td>
+                <h1>Ahmed Hassan</h1>
+                <p><em><strong>Web Architect</strong> and <strong>Freelancer</strong></em></p>
+            </td>
+        </tr>
+    </table>
     <hr size="3" noshade>
     <h3>Education</h3>
     <ul>
@@ -27,7 +36,25 @@
         </ul>
     </ul>
     <hr size="3" noshade>
-    <a href="hobbies.html"><h3>Hobbies</h3></a>
+    <h3>Skills</h3>
+    <table width="400px" height="120px">
+        <tr>
+            <td>Front-End Development</td>
+            <td>⭐⭐⭐⭐☆</td>
+        </tr>
+        <tr>
+            <td>Back-End Development</td>
+            <td>⭐⭐⭐☆☆</td>
+        </tr>
+        <tr>
+            <td>Object-Oriented Programming</td>
+            <td>⭐⭐⭐☆☆</td>
+        </tr>
+    </table>
+    <hr size="3" noshade>
+    <p><a href="hobbies.html">My Hobbies</a></p>
+    <p><a href="contact.html">Contact Me</a></p>
+    <p><a href="experience.html">My Experience</a></p>
     <hr size="3" noshade>
     <h1>🖤</h1>
     <img 
@@ -35,6 +62,6 @@
         8QBu1cPBbSQ9g&usqp=CAU" 
         alt="Horses and Horse Riding">
     <hr size="3" noshade="">
-    <a href="contact.html"><h3>Contact</h3></a>
+    <a href="test.html"><h3>HTML Challenge</h3></a>
 </body>
 </html>
