Intro to CSS Completed

--- a/index.html
+++ b/index.html
@@ -1,67 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>➣ AHMED HASSAN</title>
-</head>
-<body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Personal Site</title>
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
+
+  <body>
     <table cellspacing="20">
-        <tr>
-            <td>
-                <img src="./img/profile.png" alt="Profile Picture">
-            </td>
-            <td>
-                <h1>Ahmed Hassan</h1>
-                <p><em><strong>Web Architect</strong> and <strong>Freelancer</strong></em></p>
-            </td>
-        </tr>
+      <tr>
+        <td><img src="img/profile.png" alt="profile picture"></td>
+        <td><h1 class="username" id="name">Ahmed Hassan</h1>
+        <p><em>Founder and CTO of <strong><a href="https://www.appbrewery.co/">The App Brewery</a></strong>.</em></p>
+        <p>I am an iOS and Web Developer. I ❤️ coffee and brew my own beers.</p></td>
+      </tr>
     </table>
-    <hr size="3" noshade>
-    <h3>Education</h3>
+    <hr>
+    <h3>Books and Teaching</h3>
     <ul>
-        <li>University</li>
-        <ul>
-            <li>Bachelor's of Computer Science | Fedaral Urdu University of Art's, Science, and 
-                Technology | <a href="https://en.wikipedia.org/wiki/Islamabad" target="_blank">Islamabad</a></li>
-        </ul>
-        <li>College</li>
-        <ul>
-            <li>Pre-Engineering | Superior College | <a href="https://en.wikipedia.org/wiki/Rawalpindi" target="_blank">Rawalpindi</a></li>
-        </ul>
-        <li>School</li>
-        <ul>
-            <li>Pre-Medical | Beacon Education House | <a href="https://en.wikipedia.org/wiki/Rawalpindi" target="_blank">Rawalpindi</a></li>
-        </ul>
+      <li>The Complete iOS App Development Bootcamp</li>
+      <li>The Complete Web Development Bootcamp</li>
     </ul>
-    <hr size="3" noshade>
-    <h3>Skills</h3>
-    <table width="400px" height="120px">
+    <hr>
+    <h3>Work Experience</h3>
+    <table cellspacing="10">
+      <thead>
         <tr>
-            <td>Front-End Development</td>
-            <td>⭐⭐⭐⭐☆</td>
+          <th>Dates</th>
+          <th>Work</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>2009-2010</td>
+          <td>Researcher at The Institute of Cognitive Neurosciences</td>
         </tr>
         <tr>
-            <td>Back-End Development</td>
-            <td>⭐⭐⭐☆☆</td>
+          <td>2010-2013</td>
+          <td>Lead Developer at Tempo App</td>
         </tr>
         <tr>
-            <td>Object-Oriented Programming</td>
-            <td>⭐⭐⭐☆☆</td>
+          <td>2013-2015</td>
+          <td>Clinical Doctor at the National Health Service</td>
         </tr>
+      </tbody>
     </table>
-    <hr size="3" noshade>
-    <p><a href="hobbies.html">My Hobbies</a></p>
-    <p><a href="contact.html">Contact Me</a></p>
-    <p><a href="experience.html">My Experience</a></p>
-    <hr size="3" noshade>
-    <h1>🖤</h1>
-    <img 
-        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRpdz8al7g1u4ZdthhHwq4oS
-        8QBu1cPBbSQ9g&usqp=CAU" 
-        alt="Horses and Horse Riding">
-    <hr size="3" noshade="">
-    <a href="test.html"><h3>HTML Challenge</h3></a>
-</body>
+    <hr>
+    <h3>Skills</h3>
+    <table cellspacing="10">
+      <tr>
+        <td>iOS Development</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
+      </tr>
+      <tr>
+        <td>Web Development</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
+      </tr>
+      <tr>
+        <td>Photography</td>
+        <td>⭐️⭐️</td>
+      </tr>
+    </table>
+    <hr>
+    <a href="hobbies.html">My Hobbies</a>
+    <a href="contact-me.html">Contact Me</a>
+  </body>
 </html>
