--- a/test.html
+++ b/test.html
@@ -2,6 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <title>HTML Challenge</title>
+
+    <link rel="stylesheet" href="css/styles.css">
+
 </head>
 <body>
     <h1>HTML Challenge</h1>
