--- a/index.html
+++ b/index.html
@@ -64,5 +64,6 @@
     <hr>
     <a href="hobbies.html">My Hobbies</a>
     <a href="contact-me.html">Contact Me</a>
+    <a href="CSS_My Site/index.html">Intermediate CSS Project</a>
   </body>
 </html>
